--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,12 @@
+# Ignore all
+*
+
+# Unignore all with extensions
+!*.*
+
+# Unignore all dirs
+!*/
+
 dist
 dist-*
 cabal-dev
@@ -17,3 +26,4 @@ cabal.sandbox.config
 *.eventlog
 .stack-work/
 cabal.project.local
+
